Pequenas alteracoes na tela principal

--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 *{
-    font-family:'Roboto', sans-serif;
-    
+    font-family:'Roboto', sans-serif;   
 }
 
 .img_center{
@@ -32,8 +31,15 @@ a:hover{
 #links:hover{
     font-size: 18px;
 }
-#menus:hover{
-    background-color: #003399;
-    
+/*#menus:hover{
+    background-color: #003399; 
+}*/
+.fixed-bottom{
+    height: 25px;
 }
 
+.navbar-dark{
+    -webkit-box-shadow: 0 4px 4px -1px #757575;
+    -moz-box-shadow: 0 4px 4px -1px #757575;
+        box-shadow: 0 4px 4px -1px #757575;
+}
