--- a/public/css/add_prof_style.css
+++ b/public/css/add_prof_style.css
@@ -21,24 +21,23 @@ body{
     position: relative;
     margin-right: -80px;
     padding: 1px 0px 6px 2px;
-	border-radius: 20px;
+	border-radius: 8px;
 }
 .btn-danger{
     position: relative;
     width: 96px;
     margin-left: 85px;
     padding: 1px 0px 6px 2px;
-	border-radius: 20px;
+	border-radius: 8px;
 }
 .container{
-    box-shadow: 0 4px 5px 0 royalblue, 0 2px 30px 0 royalblue;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 3%;
     width: 450px;
-    border-radius: 10px;
+    border-radius: 8px;
   
 
 }
@@ -53,5 +52,8 @@ body{
 .desc{
     text-align: center;
     margin-top: 15px;
-    text-shadow: 1px 1px royalblue;
+    color: rgb(85, 85, 85);
+    font-weight: bold;
+    margin-top: 29px;
+    /*text-shadow: 1px 1px royalblue;*/
 }
