--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -2,7 +2,9 @@
 *{
     font-family:'Roboto', sans-serif;   
 }
-
+body{
+    background-color: #f5f5f5;
+}
 .img_center{
     height: 320px;
     display: block;
