--- a/public/css/add_prof_style.css
+++ b/public/css/add_prof_style.css
@@ -31,6 +31,7 @@ body{
 	border-radius: 8px;
 }
 .container{
+    box-shadow: 0 3px 5px 0 #E8E8E8, 0 2px 15px 0 #E8E8E8;
     display: flex;
     flex-direction: column;
     justify-content: center;
