--- a/public/css/add_prof_style.css
+++ b/public/css/add_prof_style.css
@@ -42,6 +42,10 @@ body{
   
 
 }
+#bt_back{
+    color: royalblue;
+    margin-top: 5px;
+}
 .form-check-input{
     margin-bottom: 20px;
 	
@@ -52,9 +56,6 @@ body{
 }
 .desc{
     text-align: center;
-    margin-top: 15px;
     color: rgb(85, 85, 85);
     font-weight: bold;
-    margin-top: 29px;
-    /*text-shadow: 1px 1px royalblue;*/
 }
