--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,8 @@
-//
+//Fonts
+
+//Bootstrap
+$fa-font-path:     "../webfonts";
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
