--- a/public/css/show_professor_style.css
+++ b/public/css/show_professor_style.css
@@ -52,7 +52,7 @@ body{
 .form-check-label{
     color:gray;
 }
-.desc{
+.descp{
     text-align: center;
     color: rgb(85, 85, 85);
     font-weight: bold;
